--- a/style.css
+++ b/style.css
@@ -311,14 +311,7 @@ a {
     text-align: left;
 }
 
-#left{
-    height:240px;
-    width:440px; 
-    position: absolute;
-    top:0px;
-    left:0px;
-    text-align: left;
-}
+
 
 .guide a{
    font-size:12px;
@@ -456,3 +449,58 @@ transform: rotate(-45deg);
 }
 
 
+
+#left{
+    height:240px;
+    width:440px; 
+    position: absolute;
+    top:100px;
+    left:20px;
+    text-align: left;
+}
+
+#right {
+    position: absolute;
+    right:0px;
+    top:100px;
+    height:240px;
+    width:220px; 
+    text-align: left;
+}
+#case_statistics .content{
+    display: flex;
+    flex-direction: row;
+}
+
+#yq{
+    width:200px;
+}
+
+.info_title{
+    display:block;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.case_block{
+    text-align: center;
+    font-size: 20px;
+    color:#64C2D8;
+    margin-bottom: 5px;
+    height:100px;
+    width:70px;
+}
+
+.case_block_name{
+    font-size:10px;
+    color:#20788d;
+}
+
+#case_left_column{
+    margin-right: 20px;
+}
+
+
+a{text-decoration:none}
+
+a:hover{text-decoration:none}
