--- a/style.css
+++ b/style.css
@@ -487,7 +487,7 @@ transform: rotate(-45deg);
     font-size: 20px;
     color:#64C2D8;
     margin-bottom: 5px;
-    height:100px;
+    height:120px;
     width:70px;
 }
 
@@ -500,10 +500,15 @@ transform: rotate(-45deg);
     margin-right: 20px;
 }
 
-.info_title :hover{
-    font-size: 30px;
+.icon:hover{
+    width:4em;
+    height:4em;
 }
 
 a{text-decoration:none}
 
 a:hover{text-decoration:none}
+
+#yq:hover{
+    width:65%;
+}
